[project]
name = "agentic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.0",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "openai>=2.7.0",
    "qdrant-client>=1.5.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.12.0",
]
